ContentServer and GET client commented. Readme file updated.