@@ -1,10 +1,17 @@
+package test;
+
+import main.AggregationServer;
+import main.ContentServer;
+import main.GETClient;
 import org.junit.Test;
 import static org.junit.Assert.*;
 import java.nio.file.*;
 import java.nio.charset.StandardCharsets;
 import java.io.ByteArrayOutputStream;
-import java.io.ByteArrayInputStream;
 import java.io.PrintStream;
+import java.nio.file.StandardOpenOption;
+import java.nio.file.Path;
+import java.nio.file.Files;
 
 public class MiscellaneousTests {
     // Helper method to start a server in a new thread
@@ -18,7 +25,7 @@ public class MiscellaneousTests {
     private void assertFileContent(Path filePath, Path expectedFilePath) throws Exception {
         String fileContent = new String(Files.readAllBytes(filePath), StandardCharsets.UTF_8).trim();
         String expectedContent = new String(Files.readAllBytes(expectedFilePath), StandardCharsets.UTF_8).trim();
-        assertEquals("The stored data should match the expected JSON", expectedContent, fileContent);
+        Assert.assertEquals("The stored data should match the expected JSON", expectedContent, fileContent);
     }
 
     // Helper method to run a content server and return the instance
@@ -68,7 +75,8 @@ public class MiscellaneousTests {
 
     // Method to overwrite a file with new data
     private void overwriteFile(Path filePath, String newData) throws Exception {
-        Files.write(filePath, newData.getBytes(StandardCharsets.UTF_8), StandardOpenOption.WRITE);
+        // Files.write(filePath, newData.getBytes(StandardCharsets.UTF_8), StandardOpenOption.WRITE);
+        Files.writeString(filePath, newData, StandardOpenOption.TRUNCATE_EXISTING);
     }
 
     // Test to check if the aggregation server accepts a port number in the input
@@ -86,12 +94,12 @@ public class MiscellaneousTests {
             serverThread.start(); // Start the server in a separate thread
             Thread.sleep(100); // Sleep for a short time
             int p = AggregationServer.getPort();
-            assertEquals("Server should be started on port 1234", 1234, p);
+            Assert.assertEquals("Server should be started on port 1234", 1234, p);
             AggregationServer.shutdown(); // Shut down the server
             serverThread.join(); // Wait for the server thread to finish
             System.out.println("Test finished successfully.");
         } catch (Exception e) {
-            fail("Server startup failed: " + e.getMessage());
+            Assert.fail("Server startup failed: " + e.getMessage());
         }
     }
 
@@ -120,12 +128,12 @@ public class MiscellaneousTests {
 
             String clientResponse = captureClientOutput("1234", "null");
             String expectedJson = new String(Files.readAllBytes(Paths.get("tests/weather0check.txt")), StandardCharsets.UTF_8);
-            assertTrue("Client did not receive correct JSON", clientResponse.contains(expectedJson));
+            Assert.assertTrue("Client did not receive correct JSON", clientResponse.contains(expectedJson));
 
             AggregationServer.shutdown();
             serverThread.join();
         } catch (Exception e) {
-            fail("Test failed: " + e.getMessage());
+            Assert.fail("Test failed: " + e.getMessage());
         }
     }
 
@@ -135,7 +143,7 @@ public class MiscellaneousTests {
     @Test
     public void testOverwriteData() {
         String port = "1234";
-        String contentFilePath = "src/content/IDS60903.txt"; // Change to your actual file path
+        String contentFilePath = "src/content/IDS60903.txt";
         Path filePath = Paths.get(contentFilePath);
 
         // Start the aggregation server
@@ -165,17 +173,60 @@ public class MiscellaneousTests {
             String clientResponse = captureClientOutput(port, "null");
             String expectedJson = new String(Files.readAllBytes(Paths.get("tests/weather4check.txt")), StandardCharsets.UTF_8);
             // Assert that the received data matches the new data
-            assertTrue("Client did not receive the expected JSON data", clientResponse.contains(expectedJson));
+            Assert.assertTrue("Client did not receive the expected JSON data", clientResponse.contains(expectedJson));
+
+            // Reset IDS60903.txt to back to what it was.
+            overwriteFile(filePath, OLD_DATA); // Overwrite the file with old data
+            Thread.sleep(1000);
 
             // Clean up
             contentServer.shutdown(); // Make sure to shutdown the content server
             AggregationServer.shutdown(); // Make sure to shutdown the aggregation server
             serverThread.join(); // Wait for server thread to finish
 
-            // Reset IDS60903.txt to back to what it was.
-            overwriteFile(filePath, OLD_DATA); // Overwrite the file with old data
+
+            System.out.println("Test finished successfully.");
         } catch (Exception e) {
-            fail("Test failed: " + e.getMessage());
+            Assert.fail("Test failed: " + e.getMessage());
+        }
+    }
+
+    // Tests that the aggregation server does not accept a file with no ID.
+    @Test
+    public void testNoFileID(){
+        String port = "1233";
+        String contentFilePath = "src/content/noID.txt";
+        Path filePath = Paths.get(contentFilePath);
+
+        // Start the aggregation server
+        Thread serverThread = startServer(() -> {
+            try {
+                AggregationServer.main(new String[]{port});
+            } catch (Exception e) {
+                e.printStackTrace();
+            }
+        });
+
+        // Start the content server
+        ContentServer contentServer = runContentServer(port, contentFilePath);
+
+        try {
+            Thread.sleep(500); // Wait for servers to start
+
+            // Client should recieve no data since the file was not accepted.
+            String clientResponse = captureClientOutput(port, "null");
+            System.out.println("CLIENT RESPONSE CUNT: " + clientResponse);
+            String expectedJson = "HTTP/1.1 404 Not Found";
+            Assert.assertTrue("Client did not receive error message", clientResponse.contains(expectedJson));
+
+            // Clean up
+            contentServer.shutdown(); // Make sure to shutdown the content server
+            AggregationServer.shutdown(); // Make sure to shutdown the aggregation server
+            serverThread.join(); // Wait for server thread to finish
+
+            System.out.println("Test finished successfully.");
+        } catch (Exception e) {
+            Assert.fail("Test failed: " + e.getMessage());
         }
     }
 
